# gitpatrotator

./: .gitignore  INSTALL.md  README.md  config.example.yaml  pyproject.toml
gitpatrotator/: __init__.py  __main__.py  cli.py  config.py  expiry_checker.py  github_app_client.py  gitlab_client.py  rotator.py  vault_client.py
tests/: __init__.py  test_config.py
